# neat

./: .clang-format  .clang-tidy  README.md  meson.build  meson_options.txt
include/: Actions.hh  Asset.hh  Billboard.hh  Binder.hh  Buffer.hh  Font.hh  GLResource.hh  Image.hh  Log.hh  Model.hh  NoCopy.hh  Object.hh  PImpl.hh  Program.hh  StateMachine.hh  Text.hh  Texture.hh  interface.hh  m3d.hh  platform.hh
linux/: main.cc  meson.build
source/: Asset.cc  Billboard.cc  Blending.hh  Buffer.cc  Font.cc  GLResource.cc  Image.cc  Log.cc  Material.hh  Mesh.hh  Model.cc  ModelData.hh  Object.cc  Program.cc  Text.cc  Texture.cc  assimp_loader.hh  m3d_loader.hh  wlc_linux.cc
tools/modelview/: App.cc  App.hh  main.cc  meson.build
wayland/: main.cc  meson.build
x11/: main.cc  meson.build
